{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 1327,
  "lineage": "6b9547ac-496e-0ad0-e353-0e4af8719007",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "infra-alb",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "infra-alb-listener",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "rule-1",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group-1",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-public-rt",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt-1a",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web-public-rt-1b",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-mariadb",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet1",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet2",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet1",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet2",
      "provider": "provider.aws"
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "infra_vpc",
      "provider": "provider.aws"
    }
  ]
}